@@ -115,7 +115,16 @@ int main(void)
 #else				/* #ifdef HAVE_LIB_GLIB */
 
   printf( "  $_ = << \"CODE\";\n"
+"#ifndef	FALSE\n"
+"#define	FALSE	(0)\n"
+"#endif\n"
+"\n"
+"#ifndef	TRUE\n"
+"#define	TRUE	(!FALSE)\n"
+"#endif\n"
+"\n"
 "typedef int gint;\n"
+"typedef gint gboolean;\n"
 "typedef unsigned int guint;\n"
 "typedef const void * gconstpointer;\n"
 "typedef void * gpointer;\n"
@@ -162,8 +171,44 @@ int main(void)
 "\n"
 "gint	g_slist_position	(GSList		*list,\n"
 "				 GSList		*llink);\n"
+"\n"
+"typedef struct _GHashTable	GHashTable;\n"
+"\n"
+"typedef struct _GHashNode      GHashNode;\n"
+"\n"
+"struct _GHashNode\n"
+"{\n"
+"  gpointer   key;\n"
+"  gpointer   value;\n"
+"  GHashNode *next;\n"
+"};\n"
+"\n"
+"typedef guint		(*GHashFunc)		(gconstpointer	key);\n"
+"\n"
+"typedef gboolean	(*GHRFunc)		(gpointer	key,\n"
+"						 gpointer	value,\n"
+"						 gpointer	user_data);\n"
+"\n"
+"gint  g_int_equal (gconstpointer   v,\n"
+"		   gconstpointer   v2);\n"
+"guint g_int_hash  (gconstpointer   v);\n"
+"\n"
+"GHashTable* g_hash_table_new		(GHashFunc	 hash_func,\n"
+"					 GCompareFunc	 key_compare_func);\n"
+"\n"
+"void	    g_hash_table_destroy	(GHashTable	*hash_table);\n"
+"\n"
+"void	    g_hash_table_insert		(GHashTable	*hash_table,\n"
+"					 gpointer	 key,\n"
+"					 gpointer	 value);\n"
+"\n"
+"gpointer    g_hash_table_lookup		(GHashTable	*hash_table,\n"
+"					 gconstpointer	 key);\n"
+"\n"
+"guint	    g_hash_table_foreach_remove	(GHashTable	*hash_table,\n"
+"					 GHRFunc	 func,\n"
+"					 gpointer	 user_data);\n"
 "CODE\n" );
-
 #endif				/* #ifdef HAVE_LIB_GLIB */
 
   printf( "}\n\n" );
