@@ -198,3 +198,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20040408 myglib/Makefile.am,myglib/ghash.c: add minimal GHashTable
 	 replacement (borrowed from glib 2.4.0).
 20040414 myglib/gslist.c: fix two free_list related memory leaks.
+20040415 make-perl.c,myglib/ghash.c: fix compilation with GHashTable
+	 replacement (borrowed code from glib 2.4.0 and 1.2.10).
